# grpc-file-transfer-rust

./: Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: cli.rs  file_client.rs  lib.rs  main.rs  output_print.rs
e2e_tests/: Cargo.toml
e2e_tests/src/: bench.rs  e2e_test_context.rs  tests.rs  utils.rs
proto/: Cargo.toml  build.rs
proto/proto/: file_service.proto
proto/src/: lib.rs
server/: Cargo.toml
server/src/: cli.rs  file_service.rs  lib.rs  main.rs
