[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
client = { path = "../client" }
server = { path = "../server" }
test-context = "0.1.4"

[[test]]
name = "tests"
path = "src/tests.rs"
