[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
client = { path = "../client" }
server = { path = "../server" }
assert_cmd = "2.0.8"
portpicker = "0.1.1"
tempdir = "0.3.7"
predicates = "2.1.5"
rstest = "0.16.0"
criterion = {version="0.4.0", features=["async_tokio"]}
rand = "0.8.5"
bytesize = "1.1.0"
rcgen = "0.10.0"
tonic = {workspace = true, features =["transport"]}
tokio.workspace = true

[[test]]
name = "tests"
path = "src/tests.rs"

[[bench]]
name = "bench"
harness = false
path = "src/bench.rs"
